Adwaita: tooltip fixes
The "too dark" background was caused by box-shadow inherited by
window-frame.csd, so box-shadow: none and the right background
color on tooltip selector.

--- a/gtk/resources/theme/Adwaita/_common.scss
+++ b/gtk/resources/theme/Adwaita/_common.scss
@@ -2574,7 +2574,9 @@ GtkInfoBar {
   background-color: transparentize(black, 0.5); // FIXME: I think this is not
                                                 //        what I get, it looks
                                                 //        more solid.
+  box-shadow: none; // otherwise it gets inherited by windowframe.csd
   text-shadow: 0 1px black;
+  // FIXME: we need a border or tooltips vanish on black background.
 }
 
 .tooltip * { //Yeah this is ugly
